--- a/academia.css
+++ b/academia.css
@@ -1,5 +1,5 @@
-#page-local-staticpage-view{
-background-color: red !important;
+body{
+background: red !important;
 }
 
 /*-------------------------Página de login*/
