--- a/academia.css
+++ b/academia.css
@@ -339,7 +339,7 @@ width: 100% !important;
     width: 349px !important;
     height: 199px !important;
         display: inline-block !important;
-	
+	}	
 #region-main {
    padding: 0px !important;
 }
