--- a/academia.css
+++ b/academia.css
@@ -324,7 +324,8 @@ width: 100% !important;
 
 }
 
-/*Celular*/
+/*
+*/
 
 @media screen and (max-device-width: 480px){
     .video {
@@ -339,7 +340,8 @@ width: 100% !important;
     width: 349px !important;
     height: 199px !important;
         display: inline-block !important;
-	}	
+	}
+	
 #region-main {
    padding: 0px !important;
 }
