--- a/academia.css
+++ b/academia.css
@@ -1,4 +1,21 @@
-/*-------------------------Página de login*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------Coisas em comum em todas as páginas----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+
+
+/*--------linha vermelha---*/
+
+.linhafina{
+border: 0.5px solid orangered;
+}
+
+linhamedia{
+	border: 1px solid orangered;
+	
+}
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------Pagina de login----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
 
 div#card-login.card:before{
 display: none;
@@ -122,8 +139,9 @@ div#defaultfrontpagebody > div > section.conteudo > h2.aos-init >a:hover{
    transition: .5s;
 }
 
-
-/*  ------------------------------------------------------------------Mudança na barra lateral  */
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------Mudança na barra lateral----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
 
 #nav-drawer {
     background: #171c42 !important;
@@ -133,7 +151,9 @@ div#defaultfrontpagebody > div > section.conteudo > h2.aos-init >a:hover{
 background-color: #aaa !important;
 }
 
-/*   ------------------------------------------------------------------Mudança no menu superior  */
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------Resolução para celular pequeno ----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
 
 
    @media only screen    /*  ------------------Resolução para celular pequeno  */
@@ -220,7 +240,9 @@ transition: all .5s ease;
 
 
 
-/*   ------------------------------------------------------------------Footer  */
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------------------Footer----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
 
 @media (min-width: 768px){
 .col-md-4 {
@@ -232,7 +254,10 @@ transition: all .5s ease;
     border-left: solid 1px rgba(144,144,144,.35) !important;
 }
 
-/*--------------------------------- Animação na lista de cursos*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------Animação na lista de cursos---------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+
 
 .card-deck, #frontpage-banner-content > h2{
   animation: animationFrames ease 1s;
@@ -301,7 +326,9 @@ border-top: 1px solid orangered;
 width: 100% !important;
 }
 
-/*--------------------------------------Vídeos postados -----------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------Vídeos postados---------------------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
 
 .video {
     display: inline-block !important;
@@ -324,8 +351,8 @@ width: 100% !important;
 
 }
 
-/*
-*/
+/*--------------------------Celular-----------------------------*/
+
 
 @media screen and (max-device-width: 480px){
     .video {
