--- a/academia.css
+++ b/academia.css
@@ -423,3 +423,11 @@ padding: 0px !imoportant;
     }
 
 }*/
+
+/*-----------------------------------------------------------------------------------------------------------------------*/
+/*---------------------------------------Correção post de vídeo no modo glossário----------------------------------------*/
+/*-----------------------------------------------------------------------------------------------------------------------*/
+
+.concept h4{
+display: none !important;
+}
