--- a/academia.css
+++ b/academia.css
@@ -428,6 +428,6 @@ padding: 0px !imoportant;
 /*---------------------------------------Correção post de vídeo no modo glossário----------------------------------------*/
 /*-----------------------------------------------------------------------------------------------------------------------*/
 
-.concept h4{
+h4.concept{
 display: none !important;
 }
